# prode-26-back

./: .env.example  .gitignore  API-prode.md  DEPLOY.md  Dockerfile  FRONT-REGISTRO-ACTIVACION.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy_mark1_master.yml  deploy_master.yml
k8s/aws/: 01-pvc.yaml  02-configmap.yaml  03-db-deployment.yaml  04-db-service.yaml  05-redis-deployment.yaml  07-deployment.yaml  08-worker-deployment.yaml  09-beat-deployment.yaml  10-service.yaml
k8s/microk8s/base/: beat-deployment.yaml  configmap.yaml  db-deployment.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  redis-deployment.yaml  redis-service.yaml  service.yaml  worker-deployment.yaml
mockup/: index.html
scripts/: REBUILD_DB.md  deploy-mark1.sh
src/api/: urls.py  views.py
src/core/: admin.py  emails.py  login_backend.py  models.py  signals.py  tasks.py
src/core/migrations/: 0001_initial.py  0002_userprofile_is_participant.py  0003_userprofile_activation_attempts_and_more.py  0004_sitesetting.py
src/core/templates/email/: activation.html  base.html
src/matches/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
src/matches/migrations/: 0001_initial.py  0002_match_duration_match_penalties_away_and_more.py  0003_match_extra_time_away_match_extra_time_home_and_more.py
src/predictions/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/predictions/migrations/: 0001_initial.py
src/prode/: celery.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
